tests/negative/parser/unrecognized_builtin.orng
fn main() -> Int {
    let x = @lmao(4)
    x
}